--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,11 +7,13 @@ AM_CFLAGS = -funsigned-char -Wall
 AM_CPPFLAGS = "-Imissing"
 AM_CFLAGS += $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 
+EXTRA_DIST = kernel
+
 DISTCLEANFILES = \
 	os.c
 
 oidentd_SOURCES = \
-	oidentd.c			\
+	oidentd.c		\
 	oidentd_util.c		\
 	oidentd_inet_util.c	\
 	oidentd_user_db.c	\
@@ -22,11 +24,11 @@ oidentd_SOURCES = \
 	os.c
 
 noinst_HEADERS = \
-	oidentd_cfg_parse.h		\
-	oidentd.h				\
-	oidentd_inet_util.h		\
-	oidentd_masq.h			\
-	oidentd_netlink.h		\
-	oidentd_options.h		\
-	oidentd_user_db.h		\
+	oidentd_cfg_parse.h	\
+	oidentd.h		\
+	oidentd_inet_util.h	\
+	oidentd_masq.h		\
+	oidentd_netlink.h	\
+	oidentd_options.h	\
+	oidentd_user_db.h	\
 	oidentd_util.h
