Remove -funsigned-char

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,8 @@ sbin_PROGRAMS = oidentd
 
 oidentd_LDADD =-Lmissing -lmissing $(ADD_LIB)
 
-AM_CFLAGS = -funsigned-char -Wall
+AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = "-Imissing"
-AM_CFLAGS += $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 
 EXTRA_DIST = kernel
 
