--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: c
-script: ./autogen.sh && ./configure && make
+
+os:
+  - linux
+  - osx
+
+matrix:
+  allow_failures:
+    - os: osx
+
+script: ./autogen.sh && ./configure --enable-debug && make && make check
