--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,26 @@ os:
 matrix:
   allow_failures:
     - os: osx
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+    - os: osx
+      osx_image: xcode8
+      env:
+        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
 
-script: ./autogen.sh && ./configure --enable-debug && make && make check
+before_install:
+  - eval "${MATRIX_EVAL}"
+
+script:
+  - ./autogen.sh
+  - ./configure --enable-debug
+  - make
+  - make check
