Fix "make distcheck"
Changed Makefiles to use $(srcdir) rather than a copy of the source
directory which only included headers intended for distribution.

For example, oidentd_missing.h, which is required for libmissing.a,
was not included, which caused the build through distcheck to fail.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,10 +1,10 @@
 SUBDIRS = missing
 sbin_PROGRAMS = oidentd
 
-oidentd_LDADD =-Lmissing -lmissing $(ADD_LIB)
+oidentd_LDADD = -Lmissing -lmissing $(ADD_LIB)
 
 AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS)
-AM_CPPFLAGS = "-Imissing"
+AM_CPPFLAGS = "-I$(srcdir)/missing"
 
 EXTRA_DIST = kernel
 
