--- a/src/missing/Makefile.am
+++ b/src/missing/Makefile.am
@@ -1,13 +1,13 @@
-AM_CFLAGS = -I../../src $(DEBUG_CFLAGS) $(WARN_CFLAGS)
+AM_CFLAGS = "-I$(srcdir)" $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 
 noinst_LIBRARIES = libmissing.a
 
-libmissing_a_SOURCES =  \
-	inet_aton.c			\
-	inet_ntop.c			\
-	ipv6_missing.c		\
-	getopt.c			\
-	snprintf.c			\
+libmissing_a_SOURCES = \
+	inet_aton.c	\
+	inet_ntop.c	\
+	ipv6_missing.c	\
+	getopt.c	\
+	snprintf.c	\
 	vasprintf.c
 
 noinst_HEADERS = \
