Remove common prefix from source files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,22 +13,22 @@ DISTCLEANFILES = \
 	os.c
 
 oidentd_SOURCES = \
-	oidentd.c		\
-	oidentd_util.c		\
-	oidentd_inet_util.c	\
-	oidentd_user_db.c	\
-	oidentd_options.c	\
-	oidentd_masq.c		\
-	oidentd_cfg_scan.l	\
-	oidentd_cfg_parse.y	\
+	oidentd.c	\
+	util.c		\
+	inet_util.c	\
+	user_db.c	\
+	options.c	\
+	masq.c		\
+	cfg_scan.l	\
+	cfg_parse.y	\
 	os.c
 
 noinst_HEADERS = \
-	oidentd_cfg_parse.h	\
-	oidentd.h		\
-	oidentd_inet_util.h	\
-	oidentd_masq.h		\
-	oidentd_netlink.h	\
-	oidentd_options.h	\
-	oidentd_user_db.h	\
-	oidentd_util.h
+	oidentd.h	\
+	cfg_parse.h	\
+	inet_util.h	\
+	masq.h		\
+	netlink.h	\
+	options.h	\
+	user_db.h	\
+	util.h
