Use the conf file distros ship
The various distros ship the same config file,
so we might as well use that.

--- a/src/oidentd.conf
+++ b/src/oidentd.conf
@@ -1,8 +1,21 @@
-/*
- * This is the system-wide configuration file for oidentd.
- * This file provides defaults for users. The settings in
- * this system-wide configuration file can be overridden
- * in per-user configuration files by users who have been
- * granted the required capabilities through this file.
- * See oidentd.conf(5) for more information.
- */
+# Configuration for oidentd
+# See the manpage oidentd.conf(5) for more information.
+#
+default {
+	default {
+		deny spoof
+		deny spoof_all
+		deny spoof_privport
+		allow random
+		allow random_numeric
+		allow numeric
+		deny hide
+	}
+}
+
+# you may want to hide root connections
+#user "root" {
+#	default {
+#		force reply "UNKNOWN"
+#	}
+#}
