--- a/src/oidentd.conf
+++ b/src/oidentd.conf
@@ -1,21 +1,33 @@
-# Configuration for oidentd
-# See the manpage oidentd.conf(5) for more information.
-#
+/*
+ * This is the system-wide configuration file for oidentd.
+ * This file provides defaults for users. The settings in
+ * this system-wide file can be overridden by the per-user
+ * configuration files of users who have been granted
+ * sufficient capabilities through this file.
+ *
+ * See oidentd.conf(5) for more information.
+ */
+
 default {
 	default {
+		# Capabilities are disabled by default
 		deny spoof
 		deny spoof_all
 		deny spoof_privport
-		allow random
-		allow random_numeric
-		allow numeric
+		deny random
+		deny random_numeric
+		deny numeric
 		deny hide
 	}
 }
 
-# you may want to hide root connections
-#user "root" {
+/*
+ * It is recommended that you hide any connections owned by
+ * the superuser.
+ */
+
+#user root {
 #	default {
-#		force reply "UNKNOWN"
+#		force hide
 #	}
 #}
