Change configuration file
Make sure people are aware that superuser connections are not
hidden by default.

--- a/src/oidentd.conf
+++ b/src/oidentd.conf
@@ -23,7 +23,7 @@ default {
 
 /*
  * It is recommended that you hide any connections owned by
- * the superuser.
+ * the superuser. Uncomment the following lines to do this.
  */
 
 #user root {
