Add sysconf_DATA to EXTRA_DIST

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,8 @@ oidentd_LDADD = -Lmissing -lmissing $(ADD_LIB)
 AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = "-I$(srcdir)/missing"
 
-EXTRA_DIST = kernel
+EXTRA_DIST = kernel \
+	$(sysconf_DATA)
 
 DISTCLEANFILES = \
 	os.c
