Move configuration file out of src directory
Thanks to Johnny A. Solbu <johnny@solbu.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,6 @@
 SUBDIRS = src doc
 
-EXTRA_DIST = KERNEL_SUPPORT.md
+sysconf_DATA = oidentd.conf
+
+EXTRA_DIST = KERNEL_SUPPORT.md \
+	$(sysconf_DATA)
