--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = src doc
 
-sysconf_DATA = oidentd.conf
+sysconf_DATA = oidentd.conf \
+	       oidentd_masq.conf
 
 EXTRA_DIST = KERNEL_SUPPORT.md \
 	$(sysconf_DATA)
