--- a/oidentd_masq.conf
+++ b/oidentd_masq.conf
@@ -1,13 +1,18 @@
-# You can put here repsonses for each host. See oident manpage for more info.
-# 
-# IP-ADDRESS[/<mask>]            USER-NAME   SYSTEM-TYPE
-#
-# Example:
-#192.168.1.1                    someone     UNIX
-#192.168.1.2                    noone       WINDOWS
-#192.168.1.1/32                 user1       UNIX
-#192.168.1.0/24                 user3       UNIX
-#192.168.0.0/16                 user4       UNIX
-#somehost                       user5       UNIX
-#10.0.0.0/8                     user6       UNIX
-#192.168.1.0/255.255.255.0      user7       UNIX
+/*
+ * This is an IP masquerading file for oidentd. If you
+ * enable IP masquerading support using the `-m' option,
+ * this file is read to determine the appropriate ident
+ * responses to queries intended for hosts masquerading
+ * through this server.
+ *
+ * See oidentd_masq.conf(5) for more information.
+ */
+
+# <Host>[/<Mask>]           <Ident Response>  <System Type>
+# 192.168.1.1                 someone           UNIX
+# 192.168.1.2                 noone             WINDOWS
+# 192.168.1.1/32              user1             UNIX
+# 192.168.1.0/24              user2             UNIX
+# 192.168.0.0/16              user3             UNIX
+# somehost                    user4             UNIX
+# 192.168.1.0/255.255.255.0   user5             UNIX
