Clear enableval before checking for command-line flags
It seems like for some reason $enableval initially has the value "no"
when --disable-silent-rules is passed to the ./configure script.

Thanks to unit193@ubuntu.com for reporting this.

--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,7 @@ ADD_LIB=""
 
 use_kmem=no
 
+enableval=""
 masq_support=yes
 AC_ARG_ENABLE(masq,
 [  --disable-masq          disable NAT/IP masquerading support])
