Makefile.am: Clean BUILT_SOURCES correctly

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,4 +35,9 @@ noinst_HEADERS = \
 	util.h
 
 BUILT_SOURCES = \
-	cfg_parse.h
+	cfg_parse.h	\
+	cfg_parse.c	\
+	cfg_scan.c
+
+CLEANFILES = \
+	$(BUILT_SOURCES)
