Add spoofed replies to default configuration file

--- a/oidentd.conf
+++ b/oidentd.conf
@@ -28,6 +28,8 @@ default {
 
 #user root {
 #	default {
-#		force hide
+#		# Uncomment only one of the following two lines.
+#		force hide            # Either report an error ...
+#		force reply "nobody"  # ... or spoof ident responses
 #	}
 #}
