--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,5 @@ sysconf_DATA = oidentd.conf \
 	oidentd_masq.conf
 
 EXTRA_DIST = KERNEL_SUPPORT.md \
-	$(sysconf_DATA)
+	$(sysconf_DATA) \
+	contrib
