CFLAGS: build with PIE and stack protection

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,9 @@ sbin_PROGRAMS = oidentd
 
 oidentd_LDADD = -Lmissing -lmissing $(ADD_LIB)
 
-AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS)
+AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS) \
+	-fstack-protector \
+	-fPIE
 AM_CPPFLAGS = -I "$(srcdir)/missing" \
 	-D "SYSCONFDIR=\"$(sysconfdir)\""
 AM_YFLAGS = -d
