Rewrite manual page oidentd(8)

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,19 @@
-man_MANS = oidentd.8 oidentd.conf.5 oidentd_masq.conf.5
-EXTRA_DIST = $(man_MANS) \
+man_MANS = \
+	oidentd.8 \
+	oidentd.conf.5 \
+	oidentd_masq.conf.5
+
+DISTCLEANFILES = \
+	oidentd.8
+
+EXTRA_DIST = \
+	$(man_MANS) \
+	oidentd.8.adoc \
 	rfc1413
+
+SUFFIXES = .adoc
+
+oidentd.8: oidentd.8.adoc
+
+.adoc:
+	a2x --doctype manpage --format manpage -a "sysconfdir=\"$(sysconfdir)\"" $<
