Change default oidentd.conf comment style

--- a/oidentd.conf
+++ b/oidentd.conf
@@ -1,12 +1,10 @@
-/*
- * This is the system-wide configuration file for oidentd.
- * This file provides defaults for users. The settings in
- * this system-wide file can be overridden by the per-user
- * configuration files of users who have been granted
- * sufficient capabilities through this file.
- *
- * See oidentd.conf(5) for more information.
- */
+# This is the system configuration file for oidentd. This
+# file provides defaults for users. The settings in this
+# file can be overridden by user configuration files of
+# users who have been granted sufficient privileges through
+# this file.
+#
+# See oidentd.conf(5) for more information.
 
 default {
 	default {
@@ -22,10 +20,8 @@ default {
 	}
 }
 
-/*
- * It is recommended that you hide any connections owned by
- * the superuser. Uncomment the following lines to do this.
- */
+# It is recommended that you hide any connections owned by
+# the superuser. Uncomment the following lines to do this.
 
 #user root {
 #	default {
