--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,16 +4,20 @@ man_MANS = \
 	oidentd_masq.conf.5
 
 DISTCLEANFILES = \
-	oidentd.8
+	oidentd.8 \
+	oidentd.conf.5
 
 EXTRA_DIST = \
 	$(man_MANS) \
 	oidentd.8.adoc \
+	oidentd.conf.5.adoc \
 	rfc1413
 
 SUFFIXES = .adoc
 
 oidentd.8: oidentd.8.adoc
+
+oidentd.conf.5: oidentd.conf.5.adoc
 
 .adoc:
 	asciidoctor --backend manpage --doctype manpage -a "sysconfdir=$(sysconfdir)" $<
