--- a/oidentd.conf
+++ b/oidentd.conf
@@ -1,8 +1,7 @@
-# This is the system configuration file for oidentd. This
-# file provides defaults for users. The settings in this
-# file can be overridden by user configuration files of
-# users who have been granted sufficient privileges through
-# this file.
+# This is the system-wide configuration file for oidentd.  This
+# file provides defaults for users.  The settings in this file
+# can be overridden by user configuration files of users who
+# have been granted sufficient privileges through this file.
 #
 # See oidentd.conf(5) for more information.
 
@@ -21,7 +20,7 @@ default {
 }
 
 # It is recommended that you hide any connections owned by
-# the superuser. Uncomment the following lines to do this.
+# the superuser.  Uncomment the following lines to do this.
 
 #user root {
 #	default {
