Replace backticks with single quotes

--- a/oidentd_masq.conf
+++ b/oidentd_masq.conf
@@ -1,5 +1,5 @@
 # This is an IP masquerading file for oidentd.  If you
-# enable IP masquerading support using the `-m' option,
+# enable IP masquerading support using the '-m' option,
 # this file is read to determine the appropriate ident
 # responses to queries intended for hosts masquerading
 # through this server.
