Rewrite manual page oidentd_masq.conf(5)

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -5,12 +5,14 @@ man_MANS = \
 
 DISTCLEANFILES = \
 	oidentd.8 \
-	oidentd.conf.5
+	oidentd.conf.5 \
+	oidentd_masq.conf.5
 
 EXTRA_DIST = \
 	$(man_MANS) \
 	oidentd.8.adoc \
 	oidentd.conf.5.adoc \
+	oidentd_masq.conf.5.adoc \
 	rfc1413
 
 SUFFIXES = .adoc
@@ -18,6 +20,8 @@ SUFFIXES = .adoc
 oidentd.8: oidentd.8.adoc
 
 oidentd.conf.5: oidentd.conf.5.adoc
+
+oidentd_masq.conf.5: oidentd.conf.5.adoc
 
 .adoc:
 	asciidoctor \
