--- a/oidentd_masq.conf
+++ b/oidentd_masq.conf
@@ -1,16 +1,13 @@
-# This is an IP masquerading file for oidentd.  If you
-# enable IP masquerading support using the '-m' option,
-# this file is read to determine the appropriate ident
-# responses to queries intended for hosts masquerading
-# through this server.
+# This is the NAT configuration file for oidentd.
+# If you enable NAT support with the '-m' option,
+# this file is read to determine the appropriate
+# ident responses to queries intended for hosts
+# masquerading through this server.
 #
 # See oidentd_masq.conf(5) for more information.
 
-# <Host>[/<Mask>]            <Ident Response>  <System Type>
-# 192.168.1.1                 someone           UNIX
-# 192.168.1.2                 noone             WINDOWS
-# 192.168.1.1/32              user1             UNIX
-# 192.168.1.0/24              user2             UNIX
-# 192.168.0.0/16              user3             UNIX
-# somehost                    user4             UNIX
-# 192.168.1.0/255.255.255.0   user5             UNIX
+# host[/mask]           response  system-type
+# 10.0.0.1              user1     UNIX
+# server.internal       user2     UNIX-BSD
+# 10.0.0.0/24           user3     UNIX
+# 10.0.0.0/255.255.0.0  user4     UNKNOWN
