--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,9 +4,7 @@ man_MANS = \
 	oidentd_masq.conf.5
 
 DISTCLEANFILES = \
-	oidentd.8 \
-	oidentd.conf.5 \
-	oidentd_masq.conf.5
+	$(man_MANS)
 
 EXTRA_DIST = \
 	$(man_MANS) \
@@ -18,15 +16,13 @@ EXTRA_DIST = \
 SUFFIXES = .adoc
 
 oidentd.8: oidentd.8.adoc
-
 oidentd.conf.5: oidentd.conf.5.adoc
-
 oidentd_masq.conf.5: oidentd.conf.5.adoc
 
 .adoc:
 	asciidoctor \
 		--backend manpage \
 		--doctype manpage \
-		-a "sysconfdir=$(sysconfdir)" \
+		-a "sysconfdir=@sysconfdir@" \
 		-a "mansource=@PACKAGE_STRING@" \
 		$<
