--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,14 @@ if test "$enableval" = "no"; then
 fi
 
 enableval=""
+xdgbdir_support=yes
+AC_ARG_ENABLE(xdgbdir,
+[  --disable-xdgbdir       disable XDG Base Directory support])
+if test "$enableval" = "no"; then
+	xdgbdir_support=no
+fi
+
+enableval=""
 AC_ARG_ENABLE(debug,
 [  --enable-debug          enable debugging support])
 if test "$enableval" = "yes"; then
@@ -657,6 +665,12 @@ if test "$want_libnfct" = "yes"; then
 	else
 		AC_MSG_WARN(not including libnetfilter_conntrack support)
 	fi
+fi
+
+if test "$xdgbdir_support" = "yes"; then
+	AC_DEFINE(XDGBDIR_SUPPORT, 1, [Set to include XDG Base Directory support])
+else
+	AC_DEFINE(XDGBDIR_SUPPORT, 0, [Set to include XDG Base Directory support])
 fi
 
 if test -n "$DEBUG_CFLAGS"; then
