--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -16,7 +16,7 @@ SUFFIXES = .adoc
 
 oidentd.8: oidentd.8.adoc
 oidentd.conf.5: oidentd.conf.5.adoc
-oidentd_masq.conf.5: oidentd.conf.5.adoc
+oidentd_masq.conf.5: oidentd_masq.conf.5.adoc
 
 .adoc:
 	asciidoctor \
