Improve PRNG interface
* Prefer arc4random_uniform(3), lrand48(3), random(3), rand(3), in this
  order, instead of only using rand(3).

* Reroll if necessary (not with arc4random_uniform(3)) to eliminate bias
  and potentially dangerous type casts and floating point arithmetic.

* Seed the PRNG (not with arc4random_uniform(3)) from clock_gettime(2),
  because it is more precise and gettimeofday(2) is obsolete as of
  POSIX.1-2008.  A time-based seed is sufficient as oidentd does not
  require cryptographically secure random numbers.

* Seed the PRNG (not with arc4random_uniform(3)) only after fork(2), as
  the parent process does not generate random numbers, and only after a
  successful passwd lookup.

--- a/configure.ac
+++ b/configure.ac
@@ -236,7 +236,8 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([#include <stdlib.h>
 AC_TYPE_SIGNAL
 
 AC_CHECK_FUNCS(snprintf vsnprintf getopt_long strsep vasprintf)
-AC_CHECK_FUNCS(gettimeofday select strdup strstr strtol uname)
+AC_CHECK_FUNCS(clock_gettime select strdup strstr strtol uname)
+AC_CHECK_FUNCS(arc4random_uniform lrand48 random)
 AC_CHECK_FUNCS(memcmp strftime vprintf gethostbyname)
 AC_CHECK_FUNCS(vasprintf asprintf snprintf vsnprintf)
 AC_CHECK_FUNCS(inet_aton getpagesize getopt_long)
