Add broad unveil call for OpenBSD

--- a/configure.ac
+++ b/configure.ac
@@ -241,6 +241,7 @@ AC_CHECK_FUNCS(memcmp strftime vprintf gethostbyname)
 AC_CHECK_FUNCS(vasprintf asprintf snprintf vsnprintf)
 AC_CHECK_FUNCS(inet_aton getpagesize getopt_long)
 AC_CHECK_FUNCS(setgroups)
+AC_CHECK_FUNCS(unveil)
 
 AC_SEARCH_LIBS(socket, socket, , [AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket -lnsl", , -lsocket)])
 
