Remove snprintf() from libmissing

--- a/configure.ac
+++ b/configure.ac
@@ -239,7 +239,7 @@ AC_CHECK_FUNCS(strsep)
 AC_CHECK_FUNCS(clock_gettime select strdup strstr strtol uname)
 AC_CHECK_FUNCS(arc4random_uniform lrand48 random)
 AC_CHECK_FUNCS(memcmp strftime vprintf gethostbyname)
-AC_CHECK_FUNCS(vasprintf asprintf snprintf vsnprintf)
+AC_CHECK_FUNCS(vasprintf asprintf vsnprintf)
 AC_CHECK_FUNCS(inet_aton getpagesize getopt_long)
 AC_CHECK_FUNCS(setgroups)
 AC_CHECK_FUNCS(unveil)
