--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,7 @@ sbin_PROGRAMS = oidentd
 
 oidentd_LDADD = -Lmissing -lmissing $(ADD_LIB)
 
-AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS) \
-	-fstack-protector \
-	-fPIE
+AM_CFLAGS = $(DEBUG_CFLAGS) $(WARN_CFLAGS)
 AM_CPPFLAGS = -I "$(srcdir)/missing" \
 	-D "SYSCONFDIR=\"$(sysconfdir)\""
 AM_YFLAGS = -d
