Update systemd services and socket

--- a/contrib/systemd/oidentd.service
+++ b/contrib/systemd/oidentd.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=RFC 1413 compliant ident daemon
+Documentation=man:oidentd(8) man:oidentd.conf(5) man:oidentd_masq.conf(5)
 After=network.target
 
 [Service]
 ExecStart=/usr/sbin/oidentd -S
 ExecReload=/bin/kill -HUP $MAINPID
+PrivateDevices=true
 Restart=on-failure
 Type=forking
 
