--- a/contrib/systemd/oidentd@.service
+++ b/contrib/systemd/oidentd@.service
@@ -1,7 +1,9 @@
 [Unit]
-Description=RFC 1413 compliant per-connection ident daemon
+Description=RFC 1413 compliant per-connection ident server
+Documentation=man:oidentd(8) man:oidentd.conf(5) man:oidentd_masq.conf(5)
 
 [Service]
 ExecStart=/usr/sbin/oidentd -IS
+PrivateDevices=true
 StandardInput=socket
 StandardError=syslog
