--- a/configure.ac
+++ b/configure.ac
@@ -29,10 +29,10 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_YACC
 AC_PROG_LEX
-AC_CHECK_TOOL(AR, ar)
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PATH_PROG(sedpath, sed)
+AM_PROG_AR
 
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
